# project-01

./: CHANGELOG.md  INSTALL_ONYX_ADDON.md  LICENSE  Makefile  README.md  README_TRUST_LAYER.md  SCHEMA_VERSIONING.md  SECURITY.md  SHIP_V0_1_PLAN.md
addon/: READY_TO_SELL_CHECKLIST.md  pyproject.toml
addon/deploy/: docker-compose.override.yml
addon/deploy/helm/: values.yaml
addon/deploy/helm/templates/: deployment.yaml  service.yaml
addon/docs/: api.md  compatibility.md  install.md  ops.md  security.md  upgrade.md  upgrade_rollback.md
addon/patches/: onyx_chat_backend.patch  onyx_trust_api.patch
addon/tools/: verify.sh  verify_no_ee.sh
addon/trust_evidence_addon/: __init__.py  api.py  cli.py  compat.py  config.py  service.py
addon/trust_evidence_addon/auth/: __init__.py  jwt_auth.py
addon/trust_evidence_addon/host_adapter/: __init__.py  base.py  onyx.py
addon/trust_evidence_addon/store/: __init__.py  base.py  crypto.py  filesystem.py  postgres.py
backend/onyx/: main.py
backend/trust_evidence_layer/: POLICY_BUNDLE_SCHEMA.json  __init__.py  attestation.py  audit_pack.py  auth.py  boundary.py  cli.py  evidence.py  gate.py  incidents.py  integration_controls.py  kill_switch.py  policy_registry.py  redaction.py  registry.py  replay.py  risk_registry.py  schema.py  sovereignty.py  system_claims.py  trace.py  types.py
backend/trust_layer/: __init__.py  events.py  hook_utils.py  interface.py  (+2 more)
deploy/: .env.example
docs/: CONTRACT.md  OPERATIONS.md  PRODUCT.md  SECURITY.md  chat_pipeline_map.md  trust_layer.md
reports/: trust_evidence_recon_report.md
(+148 files in other folders)
